--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "openai==0.27.8",
     "huggingface_hub==0.15.1",
     "jsonlines==3.1.0",
-    "jinja2==3.1.2"
+    "jinja2==3.1.2",
+    "mock==5.0.2"
 ]
 
 [project.urls]
