--- a/flows/configs/python_logger.yaml
+++ b/flows/configs/python_logger.yaml
@@ -1,10 +1,10 @@
 version: 1
 formatters:
   simple:
-    format: "[%(asctime)s][%(name)s][%(levelname)s] - %(message)s"
+    format: "[%(asctime)s][%(name)s:%(lineno)d][%(levelname)s] - %(message)s"
   colorlog:
     "()": "colorlog.ColoredFormatter"
-    format: "[%(cyan)s%(asctime)s%(reset)s][%(blue)s%(name)s%(reset)s][%(log_color)s%(levelname)s%(reset)s] - %(message)s"
+    format: "[%(cyan)s%(asctime)s%(reset)s][%(blue)s%(name)s:%(lineno)d%(reset)s][%(log_color)s%(levelname)s%(reset)s] - %(message)s"
     log_colors:
       DEBUG: purple
       INFO: green
