--- a/flows/application_flows/OpenAIChat/OpenAIChatAtomicFlow.yaml
+++ b/flows/application_flows/OpenAIChat/OpenAIChatAtomicFlow.yaml
@@ -1,4 +1,5 @@
 # This is an abstract flow, therefore some required fields are not defined (and must be defined by the concrete flow)
+enable_cache: True
 
 model_name: "gpt-4"
 generation_parameters:
