--- a/flows/application_flows/VectorStoreFlow/VectorStoreFlow.yaml
+++ b/flows/application_flows/VectorStoreFlow/VectorStoreFlow.yaml
@@ -2,13 +2,14 @@ name: "VectorStoreFlow"
 description: "VectorStoreFlow"
 
 input_keys:
-  - "operation" # read or write
-  - "content"
+  - "query"
+  - "write"
 
 output_keys:
-  - "retrieved_content"
+  - "retrieved"
 
 type: "chroma"
-
+api_keys:
+  openai: "YOUR_OPENAI_API_KEY"
 
 
