update interface of VectorStoreFlow

--- a/flows/application_flows/VectorStoreFlow/VectorStoreFlow.yaml
+++ b/flows/application_flows/VectorStoreFlow/VectorStoreFlow.yaml
@@ -2,8 +2,8 @@ name: "VectorStoreFlow"
 description: "VectorStoreFlow"
 
 input_keys:
-  - "query"
-  - "write"
+  - "operation" # read or write
+  - "content"
 
 output_keys:
   - "retrieved"
