--- a/flows/application_flows/OpenAIChatAtomicFlow/OpenAIChatAtomicFlow.yaml
+++ b/flows/application_flows/OpenAIChatAtomicFlow/OpenAIChatAtomicFlow.yaml
@@ -36,11 +36,26 @@ human_message_prompt_template:
     - "query"
   template_format: jinja2
 
+#######################################################
+# Input keys
+#######################################################
+
 input_keys:
   - "query"
 init_input_keys:
   - "query"
 input_data_transformations: []
+
+#######################################################
+# Output keys
+#######################################################
+
+run_output_keys: # not used yet (only for the future)
+  - "api_output"
+
+#######################################################
+# over
+#######################################################
 
 query_message_prompt_template:
   _target_: langchain.PromptTemplate
