--- a/flows/application_flows/OpenAIChatHumanFlowModule/OpenAIChatHumanFlowModule.yaml
+++ b/flows/application_flows/OpenAIChatHumanFlowModule/OpenAIChatHumanFlowModule.yaml
@@ -10,7 +10,7 @@ output_keys: null # Should be specified by the user
 subflows_config:
   Assistant:
     _target_: flows.application_flows.OpenAIFlowModule.OpenAIChatAtomicFlow.instantiate_from_default_config
-    model_name: "gpt-3.5-turbo"
+    model_name: "gpt-4"
   User:
     _target_: flows.application_flows.HumanInputFlow.instantiate_from_default_config
 
