fix(tutorials, application_flows, base_flows): fix broken reverseNumberFlow for demonstrattion

--- a/tutorials/minimal_reverse_number/reverseNumberSequential.yaml
+++ b/tutorials/minimal_reverse_number/reverseNumberSequential.yaml
@@ -1,51 +1,53 @@
 name: "ReverseNumberTwice"
 description: "A sequential flow that reverses a number twice."
 
-input_data_transformations: []
-input_keys:
+input_interface:
   - "number"
 
-output_data_transformations:
-  - _target_: flows.data_transformations.KeyCopy
-    old_key2new_key:
-      raw_response.output_number: "output_number"
-output_keys:
+output_interface:
   - "output_number"
+
 keep_raw_response: False  # Set to True to keep the raw flow response in the output data
 
 subflows_config:
-  - _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
+  first_reverse_flow:
+    _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
     overrides:
       name: "ReverseNumberFirst"
       description: "A flow that takes in a number and reverses it."
-
-      input_data_transformations: [ ]
-      input_keys:
-        - "number"
-
-      output_data_transformations:
-        - _target_: flows.data_transformations.KeyCopy
-          old_key2new_key:
-            raw_response.output_number: "first_reverse_output"
-      output_keys:
-        - "first_reverse_output"
       keep_raw_response: False
-  - _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
+  second_reverse_flow:
+    _target_: reverse_number_atomic.ReverseNumberAtomicFlow.instantiate_from_default_config
     overrides:
       name: "ReverseNumberSecond"
       description: "A flow that takes in a number and reverses it."
-
-      input_data_transformations:
-        - _target_: flows.data_transformations.KeyRename
-          old_key2new_key:
-            first_reverse_output: "number"
-      input_keys:
-        - "number"
-
-      output_data_transformations:
-        - _target_: flows.data_transformations.KeyCopy
-          old_key2new_key:
-            raw_response.output_number: "output_number"
-      output_keys:
-        - "output_number"
       keep_raw_response: False
+
+topology:
+  - goal: reverse the input number
+    # circular flow as the orchestrator, prepare the correct input for the agent
+    input_interface:
+      _target_: flows.interfaces.KeyInterface
+      keys_to_select: ["number"]
+    flow: first_reverse_flow
+    output_interface:
+      _target_: flows.interfaces.KeyInterface
+      keys_to_rename:
+        output_number: first_reverse_output
+      keys_to_select: ["first_reverse_output"]
+    reset: false
+
+  - goal: reverse the output of the first reverse
+    # circular flow as the orchestrator, prepare the correct input for the agent
+    input_interface:
+      _target_: flows.interfaces.KeyInterface
+      keys_to_rename:
+        first_reverse_output: number
+      keys_to_select: ["number"]
+    flow: second_reverse_flow
+    output_interface:
+      _target_: flows.interfaces.KeyInterface
+      keys_to_rename:
+        raw_response.output_number: output_number
+      keys_to_select: ["output_number"]
+    reset: false
