--- a/examples/minimal QA/simpleQA.yaml
+++ b/examples/minimal QA/simpleQA.yaml
@@ -9,7 +9,7 @@ output_interface:  # Connector between the Flow's output and the caller
     api_output: answer  # Rename the api_output to answer
 
 flow:  # Overrides the OpenAIChatAtomicFlow config
-  _target_: flows.application_flows.OpenAIChatAtomicFlow.instantiate_from_default_config
+  _target_: aiflows.OpenAIChatFlowModule.OpenAIChatAtomicFlow.instantiate_from_default_config
 
   name: "SimpleQA_Flow"
   description: "A flow that answers questions."
