--- a/examples/ReAct/ReAct.yaml
+++ b/examples/ReAct/ReAct.yaml
@@ -16,6 +16,9 @@ flow:
         finish:
           description: "Signal that the objective has been satisfied, and returns the answer to the user."
           input_args: [ "answer" ]
+      backend:
+        api_infos: ???
+        model_name: "gpt-3.5-turbo"
 
     Executor:
       _target_: flows.base_flows.BranchingFlow.instantiate_from_default_config
