--- a/examples/minimal QA/simpleQA.yaml
+++ b/examples/minimal QA/simpleQA.yaml
@@ -18,34 +18,39 @@ flow:  # Overrides the OpenAIChatAtomicFlow config
   input_interface_non_initialized:
     - "question"
 
-  # ~~~ OpenAI model parameters ~~
-  model: "gpt-3.5-turbo"
-  generation_parameters:
+  # ~~~ backend model parameters ~~
+  backend:
+    _target_: backends.llm_lite.LiteLLMBackend
+    api_infos: ???
+    model_name: 
+      openai: "gpt-3.5-turbo"
+      azure: "azure/gpt-4"
+    
+    # ~~~ generation_parameters ~~
     n: 1
     max_tokens: 3000
     temperature: 0.3
 
-    model_kwargs:
-      top_p: 0.2
-      frequency_penalty: 0
-      presence_penalty: 0
+    top_p: 0.2
+    frequency_penalty: 0
+    presence_penalty: 0
 
   n_api_retries: 6
   wait_time_between_retries: 20
 
   # ~~~ Prompt specification ~~~
   system_message_prompt_template:
-    _target_: langchain.PromptTemplate
+    _target_: flows.prompt_template.JinjaPrompt
     template: |2-
       You are a helpful chatbot that truthfully answers questions.
     input_variables: []
     partial_variables: {}
-    template_format: jinja2
+ 
 
   init_human_message_prompt_template:
-    _target_: langchain.PromptTemplate
+    _target_: flows.prompt_template.JinjaPrompt
     template: |2-
       Answer the following question: {{question}}
     input_variables: ["question"]
     partial_variables: {}
-    template_format: jinja2
+
