--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ["flows"]
+py-modules = ["flows","backends"]
 
 [project]
 name = "flows"
@@ -20,7 +20,7 @@ dependencies = [
     "pytest==7.3.1",
     "pytest-cov==4.1.0",
     "hydra-core==1.2.0",
-    "langchain==0.0.190",
+    "hydra-colorlog==1.1.0",
     "pyext==0.7",
     "wrapt-timeout-decorator==1.3.12.2",
     "diskcache==5.6.1",
@@ -28,7 +28,9 @@ dependencies = [
     "huggingface_hub==0.15.1",
     "jsonlines==3.1.0",
     "jinja2==3.1.2",
-    "mock==5.0.2"
+    "mock==5.0.2",
+    "rich==12.6.0",
+    "litellm==0.13.2"
 ]
 
 [project.urls]
