--- a/examples/ReAct/ReAct.yaml
+++ b/examples/ReAct/ReAct.yaml
@@ -17,8 +17,11 @@ flow:
           description: "Signal that the objective has been satisfied, and returns the answer to the user."
           input_args: [ "answer" ]
       backend:
+        _target_: flows.backends.llm_lite.LiteLLMBackend
         api_infos: ???
-        model_name: "gpt-3.5-turbo"
+        model_name: 
+          openai: "gpt-3.5-turbo"
+          azure: "azure/gpt-4"
 
     Executor:
       _target_: flows.base_flows.BranchingFlow.instantiate_from_default_config
