--- a/examples/ReActWithHumanFeedback/ReActWithHumanFeedback.yaml
+++ b/examples/ReActWithHumanFeedback/ReActWithHumanFeedback.yaml
@@ -1,11 +1,12 @@
 
-#  _target_: FlowsEpfl.ControllerExecutorFlowModule.ControllerExecutorFlow.instantiate_from_default_config
 max_rounds: 30
 
 ### Subflows specification
 subflows_config:
   Controller:
     _target_: aiflows.ControllerExecutorFlowModule.ControllerAtomicFlow.instantiate_from_default_config
+    backend:
+      api_infos: ???
     commands:
       wiki_search:
         description: "Performs a search on Wikipedia."
