--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,13 @@ dependencies = [
     "pyext==0.7",
     "wrapt-timeout-decorator==1.3.12.2",
     "diskcache==5.6.1",
-    "openai==0.27.8",
+    "openai==1.0.0",
     "huggingface_hub==0.15.1",
     "jsonlines==3.1.0",
     "jinja2==3.1.2",
     "mock==5.0.2",
     "rich==12.6.0",
-    "litellm==0.13.2"
+    "litellm==1.0.0.dev1"
 ]
 
 [project.urls]
