--- a/examples/JARVIS/JARVISm1.3.yaml
+++ b/examples/JARVIS/JARVISm1.3.yaml
@@ -9,6 +9,9 @@ flow:
       sys_prompt_pyfile_input_variable_name: python_file
       python_file_path: ${flow.python_file_path}
       commands:
+        ask_user:
+          description: "Ask the user for feedback on the next command and the plan"
+          input_args: ["goal","command","command_args","plan"]
         run_python_code:
           description: "Call a python function which is written in a py file whose contents are in the Python File section"
           input_args: [ "called_function","kwargs" ]
@@ -28,7 +31,7 @@ flow:
           {{observation}}
           The response was by:
            {{observation_type}}
-          If the response was given by the human and he approved it, make sure you rerun the you command you just suggested 
+          If the response was given by the user and he approved it, make sure you rerun the you command you just suggested 
         input_variables:
           - "observation"
           - "observation_type"
@@ -63,8 +66,10 @@ flow:
           Constraints:
           1. ~4000 word limit for short term memory. Your short term memory is short, so immediately save important information to files
           2. If you are unsure how you previously did something or want to recall past events, thinking about similar events will help you remember
-          3. Always take in consideration the human's feedback
-          4. Exclusively use the python functions defined in available functions
+          3. If the user dissapproves, you must imperitavely come up with a solution and reask for his advice
+          4. If the user approve your next command, you can rerun the command but ask for feedback in the next step
+          5. If the user approves of your whole plan, go ahead and run directly the whole plan. 
+          6. Exclusively use functions defined in available functions
 
           Available Functions:
           {{commands}}
@@ -83,7 +88,8 @@ flow:
           3. Reflect on past decisions and strategies to refine your approach.
           4. Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.
           5. Always Take into account the feedback you get. 
-          6. If the user approves, you must rerun the command you just suggested
+          6. If the user approve your next command, you can rerun the command but ask for feedback in the next step
+          7. If the user approves of your whole plan, go ahead and run directly the whole plan. 
           You should absolutely only respond in JSON format as described below
           Response Format:
           {
@@ -107,65 +113,44 @@ flow:
           _target_: baldwin.PyFileInterpreterFlowModule.PyFileInterpreterAtomicFlow.instantiate_from_default_config
           path_to_py_file: ${flow.python_file_path}
 
-    HumanFeedback:
-        _target_: aiflows.HumanStandardInputFlowModule.HumanStandardInputFlow.instantiate_from_default_config
-        request_multi_line_input_flag: False
-        query_message_prompt_template:
-          template: |2-
-            Please provide feedback on the last step. To quit type: "q".
-            
-            Relevant information:
-            == Goal == 
-            {{goal}}
-            
-            == Command ==
-            {{command}}
-            
-            == Args
-            {{command_args}}
-            
-            == Plan
-            {{plan}}
-          input_variables:
+        ask_user:
+          _target_: aiflows.HumanStandardInputFlowModule.HumanStandardInputFlow.instantiate_from_default_config
+          request_multi_line_input_flag: False
+          query_message_prompt_template:
+            template: |2-
+              Please provide feedback on the last step. To quit type: "q".
+              
+              Relevant information:
+              == Goal == 
+              {{goal}}
+              
+              == Command ==
+              {{command}}
+              
+              == Args
+              {{command_args}}
+              
+              == Plan
+              {{plan}}
+            input_variables:
+              - "goal"
+              - "command"
+              - "command_args"
+              - "plan"
+          input_interface_initialized:
             - "goal"
             - "command"
             - "command_args"
             - "plan"
-        input_interface_initialized:
-          - "goal"
-          - "command"
-          - "command_args"
-          - "plan"
+
 
   topology:
     - goal: "Select the next action and prepare the input for the executor."
       input_interface:
         _target_: flows.interfaces.KeyInterface
-        additional_transformations:
-          - _target_: flows.data_transformations.KeyMatchInput
-      flow: Controller
-      output_interface:
-        _target_: ControllerExecutorFlow.detect_finish_or_continue
-      reset: false
-
-    - goal: "Ask the user for feedback."
-      input_interface:
-        _target_: flows.interfaces.KeyInterface
-      flow: HumanFeedback
-      output_interface:
-        _target_: JarvisFlow.detect_finish_in_human_input
-        keys_to_select: ["observation","observation_type"]
-      reset: false
-
-    - goal: "Take in careful consideration the user's feedback. Then, select the next action and prepare the input for the executor."
-      input_interface:
-        _target_: flows.interfaces.KeyInterface
         keys_to_rename:
-          human_input: "observation"
+          branch_output_data: observation
         additional_transformations:
-          - _target_: flows.data_transformations.KeySet
-            key2value:
-              observation_type: "human"
           - _target_: flows.data_transformations.KeyMatchInput
       flow: Controller
       output_interface:
@@ -181,15 +166,8 @@ flow:
         keys_to_select: ["branch", "branch_input_data"]  
       flow: Executor
       output_interface:
-        _target_: flows.interfaces.KeyInterface
-        keys_to_set:
-            observation_type: "Python Interpreter"
-        additional_transformations: 
-          - _target_: flows.data_transformations.KeyRename
-            old_key2new_key:
-              branch_output_data: observation
+        _target_: JarvisFlow.output_of_executor
+        additional_transformations:
           - _target_: flows.data_transformations.KeySelect
             keys_to_select: ["observation","observation_type"]
       reset: false
-
-    
