--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "jinja2==3.1.2",
     "mock==5.0.2",
     "rich==12.6.0",
-    "litellm==1.0.0.dev1"
+    "litellm==1.0.0"
 ]
 
 [project.urls]
