--- a/website/package.json
+++ b/website/package.json
@@ -1,105 +1,105 @@
 {
 
-  "homepage": ".",
+    "homepage": "https://epfl-dlab.github.io/FLOWS-landingpage",
 
-  "name": "my-app",
+    "name": "my-app",
 
-  "version": "0.1.0",
+    "version": "0.1.0",
 
-  "private": true,
+    "private": true,
 
-  "dependencies": {
+    "dependencies": {
 
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
 
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+        "@fortawesome/free-regular-svg-icons": "^6.4.0",
 
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
 
-    "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
 
-    "@types/node": "^16.18.34",
+        "@types/node": "^16.18.34",
 
-    "@types/react": "^18.2.8",
+        "@types/react": "^18.2.8",
 
-    "@types/react-dom": "^18.2.4",
+        "@types/react-dom": "^18.2.4",
 
-    "react": "^18.2.0",
+        "react": "^18.2.0",
 
-    "react-dom": "^18.2.0",
+        "react-dom": "^18.2.0",
 
-    "react-scripts": "5.0.1",
+        "react-scripts": "5.0.1",
 
-    "smooth-scroll": "^16.1.3",
+        "smooth-scroll": "^16.1.3",
 
-    "typescript": "^4.9.5",
+        "typescript": "^4.9.5",
 
-    "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4"
 
-  },
+    },
 
-  "scripts": {
+    "scripts": {
 
-    "predeploy": "npm run build && cp .nojekyll build/",
+        "predeploy": "npm run build && cp .nojekyll build/",
 
-    "deploy": "gh-pages -d build --dotfiles",
+        "deploy": "gh-pages -d build --dotfiles",
 
-    "start": "react-scripts start",
+        "start": "react-scripts start",
 
-    "build": "react-scripts build",
+        "build": "react-scripts build",
 
-    "test": "react-scripts test",
+        "test": "react-scripts test",
 
-    "eject": "react-scripts eject"
+        "eject": "react-scripts eject"
 
-  },
+    },
 
-  "eslintConfig": {
+    "eslintConfig": {
 
-    "extends": [
+        "extends": [
 
-      "react-app",
+            "react-app",
 
-      "react-app/jest"
+            "react-app/jest"
 
-    ]
+        ]
 
-  },
+    },
 
-  "browserslist": {
+    "browserslist": {
 
-    "production": [
+        "production": [
 
-      ">0.2%",
+            ">0.2%",
 
-      "not dead",
+            "not dead",
 
-      "not op_mini all"
+            "not op_mini all"
 
-    ],
+        ],
 
-    "development": [
+        "development": [
 
-      "last 1 chrome version",
+            "last 1 chrome version",
 
-      "last 1 firefox version",
+            "last 1 firefox version",
 
-      "last 1 safari version"
+            "last 1 safari version"
 
-    ]
+        ]
 
-  },
+    },
 
-  "devDependencies": {
+    "devDependencies": {
 
-    "@testing-library/react": "^14.0.0",
+        "@testing-library/react": "^14.0.0",
 
-    "@types/smooth-scroll": "^16.1.1",
+        "@types/smooth-scroll": "^16.1.1",
 
-    "gh-pages": "^5.0.0"
+        "gh-pages": "^5.0.0"
 
-  }
+    }
 
 }
