--- a/.github/ISSUE_TEMPLATE/request_feature.yaml
+++ b/.github/ISSUE_TEMPLATE/request_feature.yaml
@@ -1,4 +1,4 @@
-name: Feature request
+name: Feature Request
 description: Propose a feature for this project
 labels: ["needs triage", "feature"]
 body:
