--- a/.github/ISSUE_TEMPLATE/bugs_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bugs_report.yaml
@@ -30,11 +30,10 @@ body:
   - type: textarea
     attributes:
       label: Describe how to reproduce the bug (optional)
-      description: >
-        Please provide a minimal code example that reproduces the bug.
+      description: Please provide a minimal code example that reproduces the bug.
       placeholder: |
         ```python
-        # Minimal code example
+         Minimal code example
         ```
       render: python
     validations:
@@ -43,12 +42,11 @@ body:
   - type: textarea
     attributes:
       label: Logs and error messages (optional)
-      description: >
-        Please provide any logs or error messages you are seeing.
+      description: Please provide any logs or error messages you are seeing.
       placeholder: "Copy and paste logs"
       value: |
         ```
-        # Error messages and logs here please
+         Error messages and logs here please
         ```
     validations:
       required: false
