--- a/examples/minimal QA/simpleQA_w_demonstrations.yaml
+++ b/examples/minimal QA/simpleQA_w_demonstrations.yaml
@@ -10,10 +10,15 @@ flow: # Overrides the ChatAtomicFlow config
 
   subflows_config:
     demonstration_flow:
-      data: null
-      params:
-        data_dir: mock_data
-        demonstrations_id: my_sire_demo
+      data: 
+        - query_data:
+            query: "What is the capital of Turkey?"
+          response_data:
+            response: "Istambul, my sir."
+        - query_data:
+            query: "what is the capital of Germany?"
+          response_data:
+            response: "Berlin, my sir."
       query_prompt_template:
         template: |2-
           Answer the following question: {{query}}
