--- a/examples/AutoGPT/AutoGPT.yaml
+++ b/examples/AutoGPT/AutoGPT.yaml
@@ -18,7 +18,6 @@ flow:
           input_args: ["answer"]
       backend:
         api_infos: ???
-        model_name: "gpt-3.5-turbo"
       human_message_prompt_template:
         template: |2-
           Here is the response to your last action:
@@ -31,6 +30,10 @@ flow:
       input_interface_initialized:
         - "observation"
         - "human_feedback"
+
+      previous_messages:
+        last_k: 1
+        first_k: 2
 
     Executor:
       _target_: flows.base_flows.BranchingFlow.instantiate_from_default_config
