--- a/examples/minimal reverse number/reverseNumberAtomic.yaml
+++ b/examples/minimal reverse number/reverseNumberAtomic.yaml
@@ -8,4 +8,4 @@ input_interface:
 output_interface: # Connector between the Flow's output and the caller
   _target_: flows.interfaces.KeyInterface
   keys_to_rename:
-    output_number: "reversed_number" # Rename the api_output to answer
+    output_number: "reversed_number" # Rename the output_number to reversed_number
