--- a/website/package.json
+++ b/website/package.json
@@ -26,11 +26,17 @@
 
         "@types/react-dom": "^18.2.4",
 
+        "@types/react-syntax-highlighter": "^15.5.11",
+
         "react": "^18.2.0",
 
         "react-dom": "^18.2.0",
 
         "react-scripts": "5.0.1",
+
+        "react-simple-code-editor": "^0.13.1",
+
+        "react-syntax-highlighter": "^15.5.0",
 
         "smooth-scroll": "^16.1.3",
 
@@ -103,3 +109,4 @@
     }
 
 }
+
