--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,8 @@
 
         "@types/react-syntax-highlighter": "^15.5.11",
 
+        "bootstrap": "^5.3.2",
+
         "react": "^18.2.0",
 
         "react-dom": "^18.2.0",
