--- a/examples/minimal_QA/simpleQA.yaml
+++ b/examples/minimal_QA/simpleQA.yaml
@@ -1,21 +1,20 @@
 
+_target_: flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow.instantiate_from_default_config
 
-_target_: flow_modules.aiflows.VisionFlowModule.VisionAtomicFlow.instantiate_from_default_config
-name: "VisionQA_Flow"
-description: "A flow that answers questions on images."
+name: "SimpleQA_Flow"
+description: "A flow that answers questions."
 
 # ~~~ Input interface specification ~~~
 input_interface_non_initialized:
   - "question"
-  - "data"
 
 # ~~~ backend model parameters ~~
 backend:
   _target_: aiflows.backends.llm_lite.LiteLLMBackend
   api_infos: ???
   model_name:
-    openai: "gpt-4-vision-preview"
-    azure: "azure/gpt-4-vision-preview"
+    openai: "gpt-3.5-turbo"
+    azure: "azure/gpt-4"
 
   # ~~~ generation_parameters ~~
   n: 1
@@ -25,10 +24,6 @@ backend:
   top_p: 0.2
   frequency_penalty: 0
   presence_penalty: 0
-  stream: False
-
-n_api_retries: 6
-wait_time_between_retries: 20
 
 # ~~~ Prompt specification ~~~
 system_message_prompt_template:
